Allow user to use shortcut to change video playback and display playback to DOM

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -18,8 +18,8 @@
           class="h-2 cursor-pointer rounded-lg accent-[#A435F0]"
         />
         <p class="flex justify-between text-xs">
-          <span>0.5x</span>
-          <span>4x</span>
+          <span id="start-speed">0.5x</span>
+          <span id="end-speed">4x</span>
         </p>
       </div>
       <input
@@ -28,6 +28,7 @@
         class="remove-arrow h-6 w-14 rounded-lg bg-stone-800 p-2 text-center placeholder:text-stone-400 focus:outline-none"
       />
     </main>
+    <script src="../constants.js"></script>
     <script src="./popup.js"></script>
   </body>
 </html>
