Get checkbox to skip delay working

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -28,6 +28,14 @@
         class="remove-arrow h-6 w-14 rounded-lg bg-stone-800 p-2 text-center placeholder:text-stone-400 focus:outline-none"
       />
     </main>
+    <section class="mt-3 flex items-center">
+      <input
+        id="skipUpNextCheckbox"
+        type="checkbox"
+        class="rounded accent-[#A435F0] checked:border-transparent focus:outline-none"
+      />
+      <label class="ms-2 text-xs font-medium">Skip "Up Next" screen</label>
+    </section>
     <script src="../constants.js"></script>
     <script src="./popup.js"></script>
   </body>
