--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link href="./output.css" rel="stylesheet" />
+    <script src="../constants.js" defer></script>
+    <script src="./js/functions.js" defer></script>
+    <script src="./js/event_listeners.js" defer></script>
+    <script src="./js/on_startup.js" defer></script>
   </head>
   <body class="border-2 border-white bg-stone-900 p-4">
     <header class="flex items-center gap-2">
@@ -17,10 +21,6 @@
           step="0.25"
           class="h-2 cursor-pointer rounded-lg accent-[#A435F0]"
         />
-        <p class="flex justify-between text-xs">
-          <span id="start-speed">0.5x</span>
-          <span id="end-speed">4x</span>
-        </p>
       </div>
       <input
         id="speedTextInput"
@@ -28,7 +28,7 @@
         class="remove-arrow h-6 w-14 rounded-lg bg-stone-800 p-2 text-center placeholder:text-stone-400 focus:outline-none"
       />
     </main>
-    <section class="mt-3 flex items-center">
+    <section class="mt-4 flex items-center">
       <input
         id="skipUpNextCheckbox"
         type="checkbox"
@@ -36,7 +36,5 @@
       />
       <label class="ms-2 text-xs font-medium">Skip "Up Next" screen</label>
     </section>
-    <script src="../constants.js"></script>
-    <script src="./popup.js"></script>
   </body>
 </html>
