--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="./output.css" rel="stylesheet" />
+    <link href="./css/output.css" rel="stylesheet" />
     <script src="../constants.js" defer></script>
     <script src="./js/functions.js" defer></script>
     <script src="./js/event_listeners.js" defer></script>
@@ -10,7 +10,7 @@
   </head>
   <body class="border-2 border-white bg-stone-900 p-4">
     <header class="flex items-center gap-2">
-      <img src="../icons/logo-64.png" alt="Logo" class="h-7" />
+      <img src="../../icons/logo-64.png" alt="Logo" class="h-7" />
       <h1 class="text-xl font-bold">Udemy Speedup</h1>
     </header>
     <main class="mt-2 flex gap-2">
