--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link href="./css/output.css" rel="stylesheet" />
-    <script src="../constants.js" defer></script>
+    <script src="../global.js" defer></script>
     <script src="./js/functions.js" defer></script>
     <script src="./js/event_listeners.js" defer></script>
     <script src="./js/on_startup.js" defer></script>
