Add settings page for setting max and min playback speed

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -57,5 +57,8 @@
         sec outro
       </p>
     </section>
+    <div class="mt-4 text-center">
+      <a href="#" id="openSettings" class="text-blue-400 hover:text-blue-300">Open Settings</a>
+    </div>
   </body>
 </html>
