--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,9 +10,37 @@
     <script src="./js/3_init.js" defer></script>
   </head>
   <body class="border-2 border-white bg-stone-900 p-4">
-    <header class="flex items-center gap-2">
-      <img src="../../icons/logo-64.png" alt="Logo" class="h-7" />
-      <h1 class="text-xl font-bold">Udemy Speedup</h1>
+    <header class="flex items-center justify-between">
+      <div class="flex items-center gap-2">
+        <img src="../../icons/logo-64.png" alt="Logo" class="h-7" />
+        <h1 class="text-xl font-bold">Udemy Speedup</h1>
+      </div>
+      <button
+        id="openSettings"
+        class="text-white hover:text-gray-300"
+        title="Open Settings"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-5 w-5"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
+          />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+          />
+        </svg>
+      </button>
     </header>
     <section class="mt-2 flex gap-2">
       <div>
@@ -57,8 +85,5 @@
         sec outro
       </p>
     </section>
-    <div class="mt-4 text-center">
-      <a href="#" id="openSettings" class="text-blue-400 hover:text-blue-300">Open Settings</a>
-    </div>
   </body>
 </html>
