--- a/src/popup/settings.html
+++ b/src/popup/settings.html
@@ -8,33 +8,48 @@
   </head>
   <body class="border-2 border-white bg-stone-900 p-4">
     <h1 class="mb-4 text-xl font-bold">Settings</h1>
-    <section class="grid gap-4">
-      <div class="grid grid-cols-[7rem_1fr] items-center gap-2">
-        <label for="minSpeed" class="font-medium">Min Speed:</label>
-        <input
-          id="minSpeed"
-          type="number"
-          min="0.1"
-          max="16"
-          step="0.1"
-          class="w-full rounded-md bg-stone-800 p-2 text-white"
-        />
-      </div>
-      <div class="grid grid-cols-[7rem_1fr] items-center gap-2">
-        <label for="maxSpeed" class="font-medium">Max Speed:</label>
-        <input
-          id="maxSpeed"
-          type="number"
-          min="0.1"
-          max="16"
-          step="0.1"
-          class="w-full rounded-md bg-stone-800 p-2 text-white"
-        />
-      </div>
-    </section>
+    <main class="grid gap-4">
+      <section class="grid gap-4">
+        <div class="grid grid-cols-[7rem_1fr] items-center gap-2">
+          <label for="minSpeed" class="font-medium">Min Speed:</label>
+          <input
+            id="minSpeed"
+            type="text"
+            class="w-full rounded-md bg-stone-800 p-2 text-white"
+          />
+        </div>
+        <div class="grid grid-cols-[7rem_1fr] items-center gap-2">
+          <label for="maxSpeed" class="font-medium">Max Speed:</label>
+          <input
+            id="maxSpeed"
+            type="text"
+            class="w-full rounded-md bg-stone-800 p-2 text-white"
+          />
+        </div>
+      </section>
+      <section class="grid gap-4">
+        <div class="grid grid-cols-[7rem_1fr] items-center gap-2">
+          <label for="minSpeed" class="font-medium">Slider step:</label>
+          <input
+            id="sliderStep"
+            type="text"
+            class="w-full rounded-md bg-stone-800 p-2 text-white"
+          />
+        </div>
+        <div class="grid grid-cols-[7rem_1fr] items-center gap-2">
+          <label for="maxSpeed" class="font-medium">Shortcut Step:</label>
+          <input
+            id="shortcutStep"
+            type="text"
+            class="w-full rounded-md bg-stone-800 p-2 text-white"
+          />
+        </div>
+      </section>
+    </main>
+
     <button
       id="saveSettings"
-      class="mt-4 rounded-md bg-purple-600 px-4 py-2 text-white hover:bg-purple-700"
+      class="mt-4 rounded-md bg-purple-600 px-4 py-2 text-center text-white hover:bg-purple-700"
     >
       Save Settings
     </button>
