Reorganize project and initialize popup values

--- a/src/popup/popup/popup.html
+++ b/src/popup/popup/popup.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="./css/output.css" rel="stylesheet" />
-    <script src="../global.js" defer></script>
-    <script src="./js/0_elems.js" defer></script>
-    <script src="./js/1_functions.js" defer></script>
-    <script src="./js/2_listeners.js" defer></script>
-    <script src="./js/3_init.js" defer></script>
+    <link href="../css/output.css" rel="stylesheet" />
+    <script src="../../global.js" defer></script>
+    <script src="./0_elems.js" defer></script>
+    <script src="./1_functions.js" defer></script>
+    <script src="./2_listeners.js" defer></script>
+    <script src="./3_init.js" defer></script>
   </head>
   <body class="border-2 border-white bg-stone-900 p-4">
     <header class="flex items-center justify-between">
       <div class="flex items-center gap-2">
-        <img src="../../icons/logo-64.png" alt="Logo" class="h-7" />
+        <img src="/icons/logo-64.png" alt="Logo" class="h-7" />
         <h1 class="text-xl font-bold">Udemy Speedup</h1>
       </div>
       <button
