--- a/src/popup/settings/settings.html
+++ b/src/popup/settings/settings.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="./css/output.css" rel="stylesheet" />
-    <script src="../global.js" defer></script>
-    <script src="./js/settings.js" defer></script>
+    <link href="../css/output.css" rel="stylesheet" />
+    <script src="../../global.js" defer></script>
+    <script src="./settings.js" defer></script>
   </head>
   <body class="border-2 border-white bg-stone-900 p-4">
     <h1 class="mb-4 text-xl font-bold">Settings</h1>
