Make settings page take up all height space

--- a/src/popup/settings/settings.html
+++ b/src/popup/settings/settings.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html>
+<html class="h-full">
   <head>
     <meta charset="utf-8" />
     <link href="../css/output.css" rel="stylesheet" />
     <script src="../../global.js" defer></script>
     <script src="./settings.js" defer></script>
   </head>
-  <body class="border-2 border-white bg-stone-900 p-4">
+  <body class="h-full overflow-auto border-2 border-white bg-stone-900 p-4">
     <h1 class="mb-4 text-xl font-bold">Settings</h1>
     <main class="grid gap-4">
       <section class="grid gap-4">
