--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,22 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="../css/output.css" rel="stylesheet" />
-    <script src="../../global.js" defer></script>
-    <script src="./0_elems.js" defer></script>
-    <script src="./1_functions.js" defer></script>
-    <script src="./2_listeners.js" defer></script>
-    <script src="./3_init.js" defer></script>
+    <link href="/src/_css/output.css" rel="stylesheet" />
+    <script src="/dist/popup.bundle.js" defer></script>
   </head>
   <body class="border-2 border-white bg-stone-900 p-4">
     <header class="flex items-center justify-between">
       <div class="flex items-center gap-2">
-        <img src="/icons/logo-64.png" alt="Logo" class="h-7" />
+        <img src="/imgs/logo-64.png" alt="Logo" class="h-7" />
         <h1 class="text-xl font-bold">Udemy Speedup</h1>
       </div>
       <button
         id="openSettings"
-        class="text-white hover:text-gray-300"
+        class="text-white hover:text-gray-300 cursor-pointer"
         title="Open Settings"
       >
         <svg
@@ -64,7 +60,7 @@
       />
       <label class="ms-2 text-xs font-medium">Skip "Up Next" screen</label>
     </section>
-    <section class="mt-4 space-y-2 text-xs">
+    <section id="skipIntroOutroSection" class="mt-4 space-y-2 text-xs">
       <p>
         Skip
         <input
